--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <p class="note">(Tap to see live preview)</p>
     <div class="pagination">
-        <a href="/src/forms.html" target="_blank"><button>1</button></a>
+        <a href="https://github.com/jubairsiyum/SPIII-Project/blob/95b6b33b2f15a47a7a8bbab6cde861a2bad90a8d/src/forms.html" target="_blank"><button>1</button></a>
         <a href="/src/nestedList.html" target="_blank"><button>2</button></a>
         <a href="/src/navBar.html" target="_blank"><button>3</button></a>
         <a href="/src/table.html" target="_blank"><button>4</button></a>
